added js and fixed some of the image issues

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-<body>
-  <h1>Welcome to Kyle's Blog</h1>
+<head>
+</head>
 
+<body>
+  <a href="/">Home Page</a>
+  <h1>Welcome to Kyle's Blog</h1>
 </body>
 
 </html>
