--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 
 <header>
   <meta http-equiv="Cache-control" content="no-cache">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <script src="{{url_for('static', filename='js/functions.js')}}"></script>
   <div id="index-bar">
@@ -10,10 +11,10 @@
       <a href="https://www.linkedin.com/in/kyle-koshiyama-8029bb108/" target="_blank">Linkedin</a>
     </div>
     <div>
-      <a href="{{ url_for('static', filename='images/Resume 2021.pdf') }}" target="_blank" download>Download Resume</a>
+      <a href="{{ url_for('static', filename='images/Resume 2021.pdf') }}" target="_blank" download>Resume</a>
     </div>
     <div>
-      <a href="/blog">Economic Blog</a>
+      <a href="/blog">Publications</a>
     </div>
   </div>
 
@@ -30,26 +31,45 @@
     <p id="title-bar"></p>
     <div>
       <ul id='education-list'>
-
         <li>
-          <img id='education-pic' src="{{url_for('static', filename='images/lsa.png')}}" alt="">
-          <div>
-            <h2>University of Michigan Literature Science & Art</h2>
+          <div id='education-row'>
+            <div>
+              <img id='education-pic' src="{{url_for('static', filename='images/lsa.png')}}" alt="">
+            </div>
+            <div id='education-text'>
+              <h2>University of Michigan Literature Science & Art</h2>
+              <ul>
+                <li>Margaret S huntington Actuarial Scholarship Recipient</li>
+                <li>Dean's List</li>
+                <li>Focus in Statistics and Economics</li>
+              </ul>
+            </div>
+            <h1>(2015-2016)</h1>
           </div>
         </li>
 
         <br>
         <li>
-          <img id='education-pic' src="{{url_for('static', filename='images/lsa.png')}}" alt="">
-          <div>
-            <h2>University of Michigan Ross School of Bussiness</h2>
+          <div id='education-row'>
+            <img id='education-pic' src="{{url_for('static', filename='images/ross.png')}}" alt="">
+            <div>
+              <h2>University of Michigan Ross School of Bussiness</h2>
+                <ul>
+                  <li>Margaret S huntington Actuarial Scholarship Recipient</li>
+                  <li>Dean's List</li>
+                  <li>Focus in Statistics and Economics</li>
+                </ul>
+            </div>
+            <h1>(2016-2019)</h1>
           </div>
         </li>
         <br>
         <li>
-          <img id='education-pic' src="{{url_for('static', filename='images/lsa.png')}}" alt="">
-          <div>
-            <h2>App Academy - San Francsico</h2>
+          <div id='education-row'>
+            <img id='education-pic' src="{{url_for('static', filename='images/lsa.png')}}" alt="">
+            <div>
+              <h2>App Academy - San Francsico</h2>
+            </div>
           </div>
         </li>
       </ul>
@@ -67,7 +87,7 @@
     <div>
       <ul></ul>
       <li>
-        <a href="https://github.com/ethereumbook/ethereumbook/blob/develop/07smart-contracts-solidity.asciidoc"><img
+        <a href="https://kickstart-clone.herokuapp.com/#/"><img
             src="{{ url_for('static', filename='images/K.png') }}" alt="HTML tutorial"></a>
       </li>
 
