--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,16 +7,68 @@
 </head>
 
 <body>
+  <div class="container px-4">
+    <div class="row gx-5">
+      <div class="col">
+       <div class="p-3 border bg-light">Custom column padding</div>
+      </div>
+      <div class="col">
+        <div class="p-3 border bg-light">Custom column padding</div>
+      </div>
+    </div>
+  </div>
+  <br>
+
   <div class="container">
-    hello world test
+    <div class="row g-2">
+      <div class="col-6">
+        <div class="p-3 border bg-light">
+           <!-- Button trigger modal -->
+           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+           <img id='education-pic' src="{{url_for('static', filename='images/lsa.png')}}" alt="">
+           </button>
+
+  <!-- Modal -->
+
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <a href="https://kickstart-clone.herokuapp.com/#/"><img
+                    src="{{ url_for('static', filename='images/K.png') }}" alt="HTML tutorial"></a>
+                  <p>Kickstarter Clone</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="p-3 border bg-light">Custom column padding</div>
+      </div>
+      <div class="col-6">
+        <div class="p-3 border bg-light">Custom column padding</div>
+      </div>
+      <div class="col-6">
+        <div class="p-3 border bg-light">Custom column padding</div>
+      </div>
+    </div>
   </div>
 
   <!-- Button trigger modal -->
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
+    <img id='education-pic' src="{{url_for('static', filename='images/lsa.png')}}" alt="">
   </button>
 
   <!-- Modal -->
+
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -27,14 +79,149 @@
         <div class="modal-body">
           <a href="https://kickstart-clone.herokuapp.com/#/"><img
             src="{{ url_for('static', filename='images/K.png') }}" alt="HTML tutorial"></a>
+          <p>Kickstarter Clone</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-1"></div>
+      <div class="col-8">
+        <ul>
+          <li>Photon Commerce flask test 4</li>
+          <div>
+            <ul>
+              <li>
+                i did this at work for a really long time, this is what i did. this is what i did. this is what i did. this is what i did
+              </li>
+              <li>
+                i did this at work 2
+              </li>
+              <li>
+                i did this at work 
+              </li>
+            </ul>
+          </div>
+        </ul>
+      </div>
+      <div class="col">2021</div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <ul>
+          <li>Simulation Systems</li>
+          <div>
+            <ul>
+              <li>
+                i did this at work
+              </li>
+              <li>
+                i did this at work 2
+              </li>
+              <li>
+                i did this at work 3
+              </li>
+            </ul>
+          </div>
+        </ul>
+      </div>
+      <div class="col">2020</div>
+    </div>   
+     <div class="row">
+      <div class="col">
+        <ul>
+          <li>picture 3</li>
+          <div>
+            <ul>
+              <li>
+                i did this at work
+              </li>
+              <li>
+                i did this at work 2
+              </li>
+              <li>
+                i did this at work 
+              </li>
+            </ul>
+          </div>
+        </ul>
+      </div>
+      <div class="col">2018</div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row row-cols-4">
+      <div class="col">
+        <!-- Button trigger modal -->
+        <div class="text center">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img class="img-fluid" id='education-pic' src="{{url_for('static', filename='images/lsa.png')}}" alt="">
+          </button>    
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <a href="https://kickstart-clone.herokuapp.com/#/"><img
+                  src="{{ url_for('static', filename='images/K.png') }}" alt="HTML tutorial"></a>
+                <p>Kickstarter Clone</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="col">
+        <!-- Button trigger modal -->
+        <div class="text center">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <img class="img-fluid" id='education-pic' src="{{url_for('static', filename='images/lsa.png')}}" alt="">
+          </button>    
+        </div>
+        
+        
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <a href="https://kickstart-clone.herokuapp.com/#/"><img
+                  src="{{ url_for('static', filename='images/K.png') }}" alt="HTML tutorial"></a>
+                <p>Kickstarter Clone</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        
+      </div>
+      <div class="col">Column 3</div>
+      <div class="col">Column 4</div>
+    </div>
+  </div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
