--- a/templates/blog.html
+++ b/templates/blog.html
@@ -46,76 +46,44 @@
   </nav>
 
 
-  <div class="container">
-    <div class="row">
-      <div class="col-1"></div>
-      <div class="col-8">
-        <ul>
-          <li>Photon Commerce flask test </li>
-          <div>
-            <ul>
-              <li>
-                i did this at work for a really long time, this is what i did. this is what i did. this is what i did. this is what i did
-              </li>
-              <li>
-                i did this at work 2
-              </li>
-              <li>
-                i did this at work 
-              </li>
-            </ul>
-          </div>
-        </ul>
+  <div>
+    <div class="d-flex justify-content-center">
+      <!-- Button trigger modal -->
+      <div class="text center">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+        style="background-color:black;color:white;">
+          <img class="img-fluid" id='education-pic' src="/static/images/Screenshot 2021-08-17 151900.png" alt="">
+        </button>    
       </div>
-      <div class="col">2021</div>
-    </div>
-
-    <div class="row">
-      <div class="col-1"></div>
-      <div class="col-8">
-        <ul>
-          <li>Photon Commerce flask test </li>
-          <div>
-            <ul>
-              <li>
-                i did this at work for a really long time, this is what i did. this is what i did. this is what i did. this is what i did
-              </li>
-              <li>
-                i did this at work 2
-              </li>
-              <li>
-                i did this at work 
-              </li>
-            </ul>
-          </div>
-        </ul>
-      </div>
-      <div class="col">2021</div>
-    </div>
-
-    <div class="row">
-      <div class="col-1"></div>
-      <div class="col-8">
-        <ul>
-          <li>Photon Commerce flask test </li>
-          <div>
-            <ul>
-              <li>
-                i did this at work for a really long time, this is what i did. this is what i did. this is what i did. this is what i did
-              </li>
-              <li>
-                i did this at work 2
-              </li>
-              <li>
-                i did this at work 
-              </li>
-            </ul>
-          </div>
-        </ul>
-      </div>
-      <div class="col">2021</div>
     </div>
   </div>
+
+  
+
+
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Kickstarter Clone test</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <a href="https://kickstart-clone.herokuapp.com/#/">
+            <img class="img-fluid" src="{{ url_for('static', filename='images/K.png') }}" alt="HTML tutorial"></a>
+          <p>Kickstarter full stack clone. Ruby and Rails backend with SQL database. React and Redux front end. Feel free to sign up for a new account or 
+            play around with the demo user account.
+          </p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
 
@@ -123,6 +91,9 @@
     <div class="row row-cols-4">
 
       <div class="col">
+
+
+
         <!-- Button trigger modal -->
         <div class="text center">
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
@@ -152,6 +123,9 @@
             </div>
           </div>
         </div>
+
+
+
       </div>
 
       <div class="col">
