--- a/templates/blog.html
+++ b/templates/blog.html
@@ -54,11 +54,14 @@
         style="background-color:black;color:white;">
           <img class="img-fluid" id='education-pic' src="/static/images/Screenshot 2021-08-17 151900.png" alt="">
         </button>    
+        <div>
+          <h1>Kyle Koshiyama</h1>
+        </div>
       </div>
     </div>
   </div>
 
-  
+
 
 
 
@@ -87,82 +90,7 @@
 
 
 
-  <div class="container">
-    <div class="row row-cols-4">
-
-      <div class="col">
-
-
-
-        <!-- Button trigger modal -->
-        <div class="text center">
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
-          style="background-color:black;color:white;">
-            <img class="img-fluid" id='education-pic' src="{{url_for('static', filename='images/K.png')}}" alt="">
-          </button>    
-        </div>
-
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Kickstarter Clone test</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <a href="https://kickstart-clone.herokuapp.com/#/">
-                  <img class="img-fluid" src="{{ url_for('static', filename='images/K.png') }}" alt="HTML tutorial"></a>
-                <p>Kickstarter full stack clone. Ruby and Rails backend with SQL database. React and Redux front end. Feel free to sign up for a new account or 
-                  play around with the demo user account.
-                </p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-
-      </div>
-
-      <div class="col">
-        <!-- Button trigger modal -->
-        <div class="text center">
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <img class="img-fluid" id='education-pic' src="{{url_for('static', filename='images/lsa.png')}}" alt="">
-          </button>    
-        </div>
-        
-        
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Ball Up</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <a href="https://kickstart-clone.herokuapp.com/#/"><img
-                  src="{{ url_for('static', filename='images/K.png') }}" alt="HTML tutorial"></a>
-                <p>Pick Up Basketball Express App</p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        
-      </div>
-      <div class="col">Column 3</div>
-      <div class="col">Column 4</div>
-    </div>
-  </div>
+  
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
